--- a/erasmus/src/erasmus/communication/templates/communication/notifications.html
+++ b/erasmus/src/erasmus/communication/templates/communication/notifications.html
@@ -10,83 +10,69 @@
 <div class="page_content">
     <div id="notif_table">
             <table id="filtered_list" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>
-                            <a href=#>
-                                <i class="fa fa-trash"></i>
-                            </a>
-                        </th>
-                        <th>
-                            <a href=#>
-                                <i class="fa fa-flag"></i>
-                            </a>
-                        </th>
-                    </tr>
-                </thead>
                 <tbody>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td>
-                        <input type="checkbox">
-                    </td>
-                    <td>
-                        <input type="checkbox">
-                    </td>
                     <td style="width:100%"><a href=#>A Notificaiton</a></td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-flag fa-xs"></i></a>
+                    </td>
+                    <td>
+                        <a href='/todo-state/{{toDo.pk}}/1/'><i class="fa fa-trash fa-xs"></i></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
