faq edit-delete controller

--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -16,8 +16,9 @@
         <p style="margin-bottom: 20px;">{{q.answer}}</p><br>
         {% if not user_type == "Student" %}
         <div class="faq-operation-buttons" style="background: #efefef; border: 1px solid #767676; border-radius: 3px;">
-            <button type="button" class="far fa-edit" style="border: none;" onclick="location.href = '#'"></button>
-            <button type="button" class="far fa-trash-alt" style="border: none;" onclick="location.href = '#'"></button>
+            <button type="button" class="far fa-edit" style="border: none;" onclick="location.href = '/edit-question/{{q.pk}}'"></button>
+            <button type="button" class="far fa-trash-alt" style="border: none;
+                                            " onclick="location.href = '/delete-question/{{q.pk}}'"></button>
         </div>
         {% endif %}
         {% endfor %}
