--- a/erasmus/src/erasmus/communication/templates/communication/edit-question.html
+++ b/erasmus/src/erasmus/communication/templates/communication/edit-question.html
@@ -1,1 +1,20 @@
-<h1> EDIT QUESTION </h1>
+{% extends 'accounts/navbar.html' %}
+
+{% load static %}
+{% load crispy_forms_tags %}
+
+{% block main_content %}
+<div class="header">
+Edit Question
+</div>
+
+<div class="page_content">
+<form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{question_form|crispy}}
+        <button class="btn btn-primary my-4" type="submit">Submit</button>
+</form>
+</div>
+
+
+{% endblock %}
