--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -29,7 +29,7 @@
             {%endif%}
             {% if not user_type == "Student" %}
             <li id="4-holder"><a id="4" href="../../courses" onclick="clicked(this)"><i class="fas fa-address-card"></i>Student List</a></li>
-            <li id="5-holder"><a id="5" href="#" onclick="clicked(this)"><i class="fas fa-address-card"></i>Waiting Approvals</a></li>
+            <li id="5-holder"><a id="5" href="../../waiting-courses" onclick="clicked(this)"><i class="fas fa-address-card"></i>Waiting Approvals</a></li>
             {%endif%}
 
             <li id="6-holder"><a id="6" href="../../documents" onclick="clicked(this)"><i class="fas fa-project-diagram"></i>Files</a></li>
