--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -67,6 +67,14 @@
     </div>
 </div>
 
+{% if messages %}
+{% for message in messages %}
+<script type="text/javascript">
+    alert("{{message}}");
+</script>
+{% endfor %}
+{% endif %}
+
 </body>
 </html>
 {% endblock content %}
