--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -51,7 +51,7 @@
                     <p>{{request.user.username}} </p>
                     <p>{{email}}</p>
                 </div>
-                <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
+                <li><a href="../../profile"><i class="fas fa-user"></i>Profile</a></li>
                 <ul class="profile_settings">
                     <li id="11-holder"><a id="11" href="#"><i class="fas fa-pen"></i>Change Password</a></li>
                     <li id="12-holder"><a id="12" href="#"><i class="fas fa-inbox"></i>Change Mail</a></li>
