Changed the structure of navbar
Changed main_content to page_content, moved the header outsite of the page_content, added message_content to navbar. Now all messages are showed in the corresponding page

--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -63,7 +63,20 @@
     </div>
 
     <div class="main_content">
-        {% block main_content %} {% endblock %}
+        {% block header_content %} {% endblock %}
+
+        {% if messages %}
+        <div class="message-content">
+            {% for message in messages %}
+            <div class="success-message">
+                <div style="font-weight: bold; color: #47783d;">Success:</div>
+                <div style="color: #47783d;">{{message}}</div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
+        {% block page_content %} {% endblock %}
     </div>
 </div>
 
