--- a/erasmus/src/erasmus/communication/templates/communication/edit-question.html
+++ b/erasmus/src/erasmus/communication/templates/communication/edit-question.html
@@ -3,11 +3,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block main_content %}
-<div class="header">
-Edit Question
-</div>
+{% block header_content %}
+<div class="header">Edit Question</div>
+{% endblock %}
 
+{% block page_content %}
 <div class="page_content">
 <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
