--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -1,19 +1,12 @@
 {% extends 'accounts/navbar.html' %}
 
-{% block main_content %}
+{% block header_content %}
 <div class="header" style="margin-bottom: 20px;">Frequently Asked Questions</div>
+{% endblock %}
 
+{% block page_content %}
 <div class="page_content" style="margin-top: 25px;">
-    {% if messages %}
-    <div class="message-content">
-        {% for message in messages %}
-        <div class="success-message">
-            <div style="font-weight: bold; color: #47783d;">Success:</div>
-            <div style="color: #47783d;">{{message}}</div>
-        </div>
-        {% endfor %}
-    </div>
-    {% endif %}
+
 
     {% if not user_type == "Student" %}
     <div class="faq_buttons">
