--- a/erasmus/src/erasmus/courses/templates/courses/add_unapproved_course.html
+++ b/erasmus/src/erasmus/courses/templates/courses/add_unapproved_course.html
@@ -2,8 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block main_content %}
+{% block header_content %}
 <div class="header">Add New Course</div>
+{% endblock %}
+
+{% block page_content %}
 <div class="page_content">
 
     {% if new_course %}
