--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -1,8 +1,11 @@
 {% extends 'accounts/navbar.html' %}
 {% load crispy_forms_tags %}
 
-{% block main_content %}
+{% block header_content %}
 <div class="header">Add Courses</div>
+{% endblock %}
+
+{% block page_content %}
 <div class="page_content">
     <div class="courses_taken">
         <h2>Current Courses Taken</h2>
