--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -1,6 +1,11 @@
 {% extends 'accounts/navbar.html' %}
-{% block main_content %}
+
+{% block header_content %}
 <div class="header">Files</div>
+{% endblock %}
+
+
+{% block page_content %}
 <div class="page_content">
     <div id="course_table">
             <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
