--- a/erasmus/src/erasmus/courses/templates/courses/upload-documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/upload-documents.html
@@ -3,8 +3,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block main_content %}
+{% block header_content %}
 <div class="header">Add New Document</div>
+{% endblock %}
+
+{% block page_content %}
 <div class="page_content">
 
         {% if new_document %}
