--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -1,6 +1,11 @@
 {% extends 'accounts/navbar.html' %}
-{% block main_content %}
+
+{% block header_content %}
 <div class="header">Waiting Approvals</div>
+{% endblock %}
+
+
+{% block page_content %}
 <style>
 </style>
 
