--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -1,7 +1,11 @@
 {% extends 'accounts/navbar.html' %}
 
 {% block header_content %}
-<div class="header">Files</div>
+<div class="header">Files
+    <div class="header_buttons">
+        <button type="button" onclick="location.href = '../../upload-documents'">Add a New File</button>
+    </div>
+</div>
 {% endblock %}
 
 
