--- a/erasmus/src/erasmus/communication/templates/communication/edit-question.html
+++ b/erasmus/src/erasmus/communication/templates/communication/edit-question.html
@@ -3,6 +3,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'faq_style.css' %}">
+{% endblock %}
+
 {% block header_content %}
 <div class="header">Edit Question</div>
 {% endblock %}
