--- a/erasmus/src/erasmus/communication/templates/communication/faq.html
+++ b/erasmus/src/erasmus/communication/templates/communication/faq.html
@@ -1,24 +1,24 @@
 {% extends 'accounts/navbar.html' %}
 
 {% block header_content %}
-<div class="header" style="margin-bottom: 20px;">Frequently Asked Questions</div>
+<div class="header" style="margin-bottom: 20px;">Frequently Asked Questions
+    {% if not user_type == "Student" %}
+    <div class="header_buttons">
+        <button type="button" onclick="location.href = '../../add-question'">Add a New FAQ</button>
+    </div>
+    {% endif %}
+</div>
 {% endblock %}
 
 {% block page_content %}
 <div class="page_content" style="margin-top: 25px;">
 
-
-    {% if not user_type == "Student" %}
-    <div class="faq_buttons">
-        <button type="button" onclick="location.href = '../../add-question'">Add a New FAQ</button>
-    </div>
-    {% endif %}
     <ol class="faq">
         {% for q in questions %}
         <li style="font-weight: bold;">{{q.question}}</li>
         <p style="margin-bottom: 20px;">{{q.answer}}</p><br>
         {% if not user_type == "Student" %}
-        <div class="faq-operation-buttons" style="background: #efefef; border: 1px solid #767676; border-radius: 3px;">
+        <div class="faq-buttons" style="background: #efefef; border: 1px solid #767676; border-radius: 3px;">
             <button type="button" class="far fa-edit" style="border: none;" onclick="location.href = '/edit-question/{{q.pk}}'"></button>
             <button type="button" class="far fa-trash-alt" style="border: none;
                                             " onclick="location.href = '/delete-question/{{q.pk}}'"></button>
