--- a/erasmus/src/erasmus/accounts/templates/accounts/home.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/home.html
@@ -95,7 +95,7 @@
                 </table>
         </section>
 
-        <button class = "addToDo" onclick = "openForm()">Add To Do</button>
+        <button class = "addToDo" onclick="location.href = '../../add-todo'">Add To Do</button>
 
         <div class = "form-popup" id = "myForm">
             <form class = "form-container">
