add to do fixes

--- a/erasmus/src/erasmus/accounts/templates/accounts/home.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/home.html
@@ -113,7 +113,7 @@
         <script>
         function openForm()
         {
-            document.getElementById( "myFor" ).style.display = "block";
+            document.getElementById( "myForm" ).style.display = "block";
         }
 
         function closeForm() 
