--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -35,8 +35,7 @@
                     <td>{{course.course.bilkent_equivalent}}</td>
                     <td>{{course.course.bilkent_equivalent.course_credit}}</td>
                     <td>NULL</td>
-                    <!--<td style="width:25%"><button type="button">Remove</button></td>-->
-                    <td><a class="btn btn-outline-success" href="/remove-from-courses/{{course.course.pk}}">Remove</a></td>
+                    <td><a class="button" href="/remove-from-courses/{{course.course.pk}}">Remove</a></td>
                 </tr>
                 {%endfor%}
                 </tbody>
@@ -90,8 +89,7 @@
                     <td>{{course.bilkent_equivalent}}</td>
                     <td>{{course.bilkent_equivalent.course_credit}}</td>
                     <td>NULL</td>
-                    <!--<td style="width:25%"><button type="button" href="/add-to-courses/{{course.pk}}/">Add</button></td>-->
-                    <td><a class="btn btn-outline-success" href="/add-to-courses/{{course.pk}}">Add</a></td>
+                    <td><a class="button" href="/add-to-courses/{{course.pk}}">Add</a></td>
                 </tr>
                 {%endfor%}
                 </tbody>
