--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -32,10 +32,8 @@
                     <td style="width:200px">{{document.date}}</td>
                     <td style="width:350px;">
                         <button href="#" type="button">View</button>
-                        <button href="#" type="button">Download</button>
-                        <a href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
-                        <button href="/delete-document/{{ document.pk}}" type="button">Delete</button>
-                        <a href="/delete-document/{{ document.pk}}" >Delete</a>
+                        <a class="button" href="{{document.document.url}}" download="{{document.document.url}}">Download</a>
+                        <a class="button" href="/delete-document/{{ document.pk}}">Delete</a>
                     </td>
                 </tr>
                 {%endfor%}
