Style link bug fixed

--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -1,9 +1,11 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'styles.css' %}">
 
-{% block stylesheet %}{% endblock %}
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'styles.css' %}">
+{% endblock %}
 
 {% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
