--- a/erasmus/src/erasmus/accounts/templates/accounts/login.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 {% block stylesheet %}
+<link rel="stylesheet" href="{% static 'styles.css' %}">
 <link rel="stylesheet" href="{% static 'login_style.css' %}">
 {% endblock %}
 
