--- a/erasmus/src/erasmus/courses/static/home_style.css
+++ b/erasmus/src/erasmus/courses/static/home_style.css
@@ -14,7 +14,7 @@ section
 .status
 {
     display: grid;
-    grid-template-columns: 14% 65% 50%;
+    grid-template-columns: 14% 65%;
 
     width: 100%;
 
