comm view fix & todo link fix & status label fix

--- a/erasmus/src/erasmus/accounts/templates/accounts/home.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/home.html
@@ -32,7 +32,7 @@
                     {% for flaggedToDo in flagged_todo %}
                     <tr bgcolor= "#FFBAAB">
                         <td style="width:100%">
-                            <a href="../../waiting-courses">{{flaggedToDo.header}}</a><br>
+                            <a href="../../courses">{{flaggedToDo.header}}</a><br>
                             Explanation: {{flaggedToDo.body}}<br>
                             Due Date: {{flaggedToDo.due_date}}<br>
                         </td>
