--- a/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/student_profile.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="{% static 'student_profile_from_coordinator.css' %}">
 {% endblock %}
 
-{% block main_content %}
+{% block page_content %}
 
-<div class="main_content">
+<div class="page_content">
             <div class="viewed-student-info">
                 <div class = "photo-mail">
                     <img src="../../static/user.png" alt="user" width="100px" height="100px" >
