--- a/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/waiting_courses.html
@@ -25,7 +25,7 @@
                 <tbody>
                 {% for user_course in unapproved_courses %}
                 <tr>
-                    <td><a href="../../student/0">{{user_course.user.user.name}} <i class="fas fa-external-link-alt"></i></a></td>
+                    <td><a href="../../profile/{{user_course.user.user.pk}}">{{user_course.user.user.name}} <i class="fas fa-external-link-alt"></i></a></td>
                     <td><a>{{user_course.user.university}}</a></td>
                     <td><a>{{user_course.course.course_name}} waiting for approval</a></td>
                 </tr>
