--- a/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
+++ b/erasmus/src/erasmus/accounts/templates/accounts/navbar.html
@@ -35,7 +35,7 @@
 
             <li id="6-holder"><a id="6" href="../../documents" onclick="clicked(this)"><i class="fas fa-project-diagram"></i>Files</a></li>
             <li id="7-holder"><a id="7" href="#" onclick="clicked(this)"><i class="fas fa-address-book"></i>Messages</a></li>
-            <li id="8-holder"><a id="8" href="#" onclick="clicked(this)"><i class="fas fa-map-pin"></i>Forum</a></li>
+            <li id="8-holder"><a id="8" href="../../forum" onclick="clicked(this)"><i class="fas fa-map-pin"></i>Forum</a></li>
 			<li id="9-holder"><a id="9" href="../../faq" onclick="clicked(this)"><i class="fas fa-question-circle"></i>FAQ</a></li>
         </ul>
         {% endblock %}
